# the-rights-machine

./: .gitignore  README.md  manager.h  the-rights-machine.code-workspace
the-rights-machine/: CMakeLists.old  CMakeLists.txt  Dockerfile  docker-compose.yaml  swagger.yml
the-rights-machine/database/Tables/: tCodes.sql  tComponent.sql  tElement.sql  tError.sql  tItem.sql  tLine.sql  tMessage.sql  tQuery.sql  tRequest.sql  tResponse.sql  tUser.sql  tUserChange.sql  tWatchdog.sql
the-rights-machine/source/: CMakeLists.txt
the-rights-machine/source/cuda include/: cuda.cuh  grid.cuh  row.cuh
the-rights-machine/source/cuda source/: cuda.cu  grid.cu  row.cu
the-rights-machine/source/include/: address.h  allocator.h  authentication.h  bsttst.h  chain.h  charbuf.h  codes.h  common.h  comparison.h  component.h  components.h  console.h  cpu.h  crumbs.h  database.h  databases.h  datetime.h  debug.h  element.h  elements.h  error.h  errors.h  fifo.h  file.h  gpu.h  grid.h  guid.h  header.h  http.h  inquiry.h  item.h  items.h  json.h  line.h  lines.h  list.h  log.h  manager.h  map.h  memory.h  (+33 more)
the-rights-machine/source/include/compute/: cpu.h  gpu.h  grid.h  header.h  manager.h  result.h  row.h  task.h
the-rights-machine/source/include/custom/: string.h
the-rights-machine/source/include/database/: databases.h  records.h  storage.h  user.h  users.h
the-rights-machine/source/include/interfaces/: chain.h  factory.h  notification.h
the-rights-machine/source/include/message/: inquiry.h  map.h  message.h
the-rights-machine/source/include/models/: element.h  elements.h  item.h  items.h  line.h  lines.h  queries.h  query.h  request.h  response.h  responses.h
the-rights-machine/source/include/old/: address.h  authentication.h  charbuf.h  codes.h  comparison.h  console.h  databases.h  fifo.h  http.h  log.h  odbc.h  page.h  pair.h  parameter.h  ssl.h  wsock.h
the-rights-machine/source/include/queues/: database.h  memory.h  messaging.h
the-rights-machine/source/include/server/: configuration.h  console.h  error.h  errors.h  output.h  pending.h  server.h  settings.h  starter.h  watchdog.h
the-rights-machine/source/include/types/: allocator.h  datetime.h  guid.h  list.h  zone.h
the-rights-machine/source/source/: bsttst.cpp  charbuf.cpp  component.cpp  console.cpp  cpu.cpp  crumbs.cpp  database.cpp  datetime.cpp  debug.cpp  element.cpp  errors.cpp  factory.cpp  gpu.cpp  grid.cpp  guid.cpp  header.cpp  http.cpp  item.cpp  json.cpp  line.cpp  log.cpp  main.cpp  memory.cpp  message.cpp  odbc.cpp  page.cpp  parser.cpp  pending.cpp  query.cpp  records.cpp  request.cpp  response.cpp  responses.cpp  row.cpp  server.cpp  starter.cpp  storage.cpp  string.cpp  task.cpp  user.cpp  (+4 more)
the-rights-machine/source/source/compute/: cpu.cpp  gpu.cpp  grid.cpp  manager.cpp  result.cpp  row.cpp  task.cpp
the-rights-machine/source/source/database/: records.cpp  storage.cpp  user.cpp  users.cpp
the-rights-machine/source/source/message/: inquiry.cpp  message.cpp
the-rights-machine/source/source/models/: component.cpp  element.cpp  header.cpp  item.cpp  line.cpp  query.cpp  request.cpp  response.cpp  responses.cpp
the-rights-machine/source/source/old/: address.cpp  authentication.cpp  console.cpp  odbc.cpp  page.cpp  parameters.cpp  ssl.cpp  string.cpp
the-rights-machine/source/source/queues/: database.cpp  memory.cpp  messaging.cpp
the-rights-machine/source/source/server/: configuration.cpp  console.cpp  error.cpp  errors.cpp  pending.cpp  server.cpp  starter.cpp  watchdog.cpp
the-rights-machine/source/source/types/: datetime.cpp  guid.cpp  zone.cpp
the-rights-machine/spreadsheet/: code.gs
the-rights-machine/terraform/: deployment.tf  deployment.yml  ingress.yml  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
the-rights-machine/terraform/.terraform/modules/: modules.json
the-rights-machine/test/: CMakeLists.txt  component.cpp  error.cpp  error.h  item.cpp  line.cpp  main.cpp  request.cpp  response.cpp  response.h  result.cpp  result.h  tests.cpp
the-rights-machine/test/data/: basicAvailable.json  basicDualAvailable.json  basicUnavailable.json  basicUnavailableMinusComponent.json  basicWithBadDatesAvailable.json  basicWithFullISODateAvailable.json  body.json  invalidJson.json  outOfRange.json  twoItemsBothAvailable.json  twoItemsOneAvailable.json
the-rights-machine/test/include/: component.h  error.h  line.h  message.h  request.h  response.h  result.h
the-rights-machine/test/source/: client.cpp  component.cpp  element.cpp  error.cpp  item.cpp  line.cpp  main.cpp  message.cpp  request.cpp  response.cpp  responses.cpp  result.cpp  tests.cpp
the-rights-machine/tests/: error.cpp  result.cpp  result.h  tests.cpp  tests.vcxproj.filters
(+289 files in other folders)
